# gw_unc_reduction

./: LICENSE  README.md  README.txt  environment.yml
developed_software/: pyproject.toml
developed_software/gravchaw/: __init__.py  execute_workflow.py  model_bridge.py  version.py
developed_software/gravchaw/models/: __init__.py  coupled_model_grid.py  coupled_model_out.py  gravi4gw_hybrid.py  model_grid.py  model_out.py
example/: herebedragons.py
example/01_create_gw/: gw_flopy.ipynb
example/01_create_gw/modfied_inputs/: ghb.pkl  ghb.txt  idomain.txt  init_head.txt  modf_botm.txt  modf_top.txt  packagedata.pkl  recharge.npy
example/02_paper_case2/: par_unc_joint_1.ipynb
example/03_paper_case4/: par_unc_joint_2.ipynb
example/04_paper_case3/: par_unc_individual.ipynb
example/05_paper_case1/: par_unc_head.ipynb
example/observation_data/: coord_gravstn.csv  grav.csv  heads.csv
